<resources>
    <string name="app_name">Project_Note</string>
    <string name="titleText">PROJECT NOTE</string>
    <string name="acceptRegistrationText">Accept</string>
    <string name="exceptionInRegistrationText">Exception</string>
    <string name="passwordText">Password:</string>
    <string name="loginText">Login:</string>
    <string name="signinbtn">Sign in</string>
    <string name="registrationbtn">Registration</string>
    <string name="search_title">search</string>
    <string name="note_title">Note</string>
    <string name="label_title">Label</string>
    <string name="sign_out_title">Sign out</string>
    <string name="exit_title">Exit</string>
    <string name="help_title">Help</string>
    <string name="note_color">color</string>
    <string name="note_label">label</string>
    <string name="add_note">added</string>
    <string name="note_access">access</string>
    <string name="empty"></string>
    <string name="note_delete">delete</string>
    <string name="server_url">http://94.179.211.12:3000</string>
    <string name="search_note">search note</string>
    <string name="another_note">another note</string>
    <string name="another_note_btn">Search</string>
</resources>
