<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/note"
          android:title="@string/note_title"
          android:orderInCategory="1"
          android:icon="@mipmap/ic_note_text"
          app:showAsAction="ifRoom"
    />
    <item android:id="@+id/label"
          android:title="@string/label_title"
          android:orderInCategory="1"
          android:icon="@mipmap/ic_tag_text_outline"
          app:showAsAction="ifRoom"
    />
    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:orderInCategory="1"
          android:icon="@mipmap/ic_magnify"
          app:showAsAction="ifRoom"
          app:actionViewClass="android.support.v7.widget.SearchView"
    />
</menu>