<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleText"
            android:id="@+id/titleView" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loginText"
            android:id="@+id/loginView" android:layout_below="@+id/titleView" android:layout_centerHorizontal="true"
            android:layout_marginTop="102dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEdit" android:layout_below="@+id/loginView" android:layout_centerHorizontal="true"
            android:inputType="text"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/passwordText"
            android:id="@+id/passworView" android:layout_below="@+id/loginEdit" android:layout_centerHorizontal="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEdit" android:layout_below="@+id/passworView" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/exceptionInRegistrationText"
            android:id="@+id/exceptionView"
            android:layout_marginTop="36dp" android:layout_below="@+id/password2Edit"
            android:layout_alignLeft="@+id/passworView" android:layout_alignStart="@+id/passworView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password2Edit" android:layout_below="@+id/passwordEdit" android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceptRegistrationText"
            android:id="@+id/acceptRegistrationbtn" android:layout_below="@+id/exceptionView" android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp" android:onClick="signInClick"/>
</RelativeLayout>